# mapreduce-word

./: .gitignore  README.md  docker-compose.yml  run-command-in-each-backend.sh  start-docker.sh
POC/: README.md
POC/mainserver/cpp/: CMakeLists.txt  Dockerfile  main.cpp  wordCounter.cpp
POC/mainserver/cpp/listener/: CMakeLists.txt  listener.cpp  listener.h
POC/mainserver/node/map/: CMakeLists.txt  listener.cpp  listener.h  main.cpp
POC/mainserver/rust/: Dockerfile
POC/mainserver/rust/first/: Cargo.toml  Dockerfile  build.sh  readme.md
POC/mainserver/rust/first/src/: main.rs
backend/common/: Cargo.toml
backend/common/src/: data_structures.rs  lib.rs  rocket_common.rs  rocket_common_main.rs
backend/controller/: Cargo.toml  Rocket.toml
backend/controller/src/: main.rs  routes.rs
backend/map/: Cargo.toml
backend/map/src/: main.rs  routes.rs
backend/reduce/: Cargo.toml
build_scripts/: build_all.sh  build_and_run.sh
build_scripts/containers/: Compile_Dockerfile  Minimal_Dockerfile  common.py  containers.json  create_containers.py  run_containers.py  stop_containers.py
controller/: Cargo.toml  Dockerfile  build_container.sh
controller/src/: main.rs  routes.rs
docker/: Backend_Dockerfile
main_site/: README.md  package-lock.json  package.json  vite.config.js
main_site/src/components/: HelloWorld.vue
main_site/test/: App.vue  index.html  test.js
map/: Cargo.toml  Dockerfile
map/src/: main.rs  routes.rs
